1.2.4b1:
    Core & Setup:
    * 0087 FIX: Fixed possible locking issue when using datasource program with long output...
    * 0313 FIX: Avoid duplicate reading of configuration file on --create-rrd...

    Checks & Agents:
    * 0306 esx_vsphere_counters: added missing ramdisk levels sfcbtickets
    * 0073 moxa_iologik_register: new check to monitor moxa e2000 series registers
    * 0105 apc_humidity: New Check for humidity levels on APC Devices
    * 0106 3ware_units: The verifying state is now handled as ok...
    * 0086 timemachine: new check checking the age of latest backup by timemachine on MAC OS
    * 0074 raritan_pdu_plugs: new check for Raritan PX-2000 family PDUs...
    * 0107 stulz_alerts, stulz_powerstate, stulz_temp, stulz_humidity: New Checks for Stulz clima devices
    * 0075 raritan_pdu_inlet: new check to monitor inlet sensors of the Raritan PX-2000 PDUs
    * 0315 hitachi_hnas_quorumdevice, hitachi_hnas_pnode, hitachi_hnas_vnode: New checks for Hitachi HNAS devices
    * 0373 wut_webtherm: Supporting several other devices now
    * 0377 check_http: Certificate Age mode now supports SNI...
    * 0103 FIX: services: Fixed bug with service inventory defined in main.mk...
    * 0299 FIX: borcade_mlx_fan: Prettified output, handling "other" state now
    * 0300 FIX: cisco_fru_power: Trying not to inventorize not plugged in FRUs...
    * 0305 FIX: apache_status: Fixed exception when agent reports HTML code as apache-status data...
    * 0104 FIX: mssql: Server instances with underline in name are now supported....
    * 0240 FIX: Virtualmachine names with space no longer have missing piggyback data...
    * 0310 FIX: apache_status: Improved handling of unexpeted data sent by agents...
    * 0088 FIX: esx_vsphere_datastores: fixed error with reported capacity of 0 bytes...
    * 0243 FIX: cisco_qos: no longer crashes when the qos policy name is not set...
    * 0326 FIX: hr_fs printer_supply: Improved translation of wrong encoded chars...