@@ -2,6 +2,7 @@
     Core & Setup:
     * 0087 FIX: Fixed possible locking issue when using datasource program with long output...
     * 0313 FIX: Avoid duplicate reading of configuration file on --create-rrd...
+    * 0379 FIX: check_mk -c: Now also rewrites the location of conf.d directory
 
     Checks & Agents:
     * 0306 esx_vsphere_counters: added missing ramdisk levels sfcbtickets
